test/files/neg/t2180.check
t2180.scala:5: error: type mismatch;
 found   : Iterable[_]
 required: scala.collection.IterableOnce[Mxml]
        case s: scala.collection.Iterable[_] => s
                                                ^
t2180.scala:6: error: type mismatch;
 found   : Any
 required: Mxml
        case a => List(a)
                       ^
2 errors
